--- a/language/en-GB.tpl_Plumeria.ini
+++ b/language/en-GB.tpl_Plumeria.ini
@@ -4,7 +4,7 @@ TPL_FRONTEND_PARAMETER_MODERNIZR_DESC="Enable JavaScript modernizr.js in head"
 TPL_FRONTEND_PARAMETER_CSSMETHOD_LABEL="CSS method"
 TPL_FRONTEND_PARAMETER_CSSMETHOD_DESC="Choose the way you use css"
 
-TPL_FRONTEND_PARAMETER_LESSJS_LABEL="less.js"
+TPL_FRONTEND_PARAMETER_LESSJS_LABEL="Enable less.js"
 TPL_FRONTEND_PARAMETER_LESSJS_DESC="Loading less.js for developing"
 
 TPL_FRONTEND_PARAMETER_FOUNDATION_LABEL="Foundation (Made by ZURB)"
